src/objects/smagicreminder__EventReminderConfig__c.object
<CustomObject>
    <fields>
        <fullName>Config_Version__c</fullName>
        <label>Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Config_String__c</fullName>
        <description>ss</description>
        <label>Config String</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Configuration_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Configuration Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicreminder__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicreminder__SMSOptOut__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SMSOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicreminder__SMSSenderId__c</fullName>
        <label>SMSSenderId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__SMSText__c</fullName>
        <label>SMSText</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicreminder__Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Template used in configuration</description>
        <label>SMS Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>Event Reminder Configurations</relationshipLabel>
        <relationshipName>Event_Reminder_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicreminder__onDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>onDelete</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Reminder Configuration</label>
    <listViews>
        <fullName>smagicreminder__All</fullName>
        <columns>NAME</columns>
        <columns>smagicreminder__Configuration_Name__c</columns>
        <columns>smagicreminder__Config_String__c</columns>
        <columns>smagicreminder__onDelete__c</columns>
        <columns>smagicreminder__SMSOptOut__c</columns>
        <columns>smagicreminder__SMSSenderId__c</columns>
        <columns>smagicreminder__SMSText__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Reminder Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>